# rabai_autoclick

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ACCEPTANCE_REPORT_v22.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUNDING.yml  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  TODO.md  __init__.py  __main__.py  build_app.sh  build_dmg.sh  codeql-config.yml  docker-compose.yml  execution_stats.json  main.py  pyproject.toml  requirements.txt  run_gui.py  setup.py  tasks.md  配置1.json
.github/: dependabot.yml
actions/: README.md  __init__.py  ab_testing_action.py  abc2_action.py  abc3_action.py  abc4_action.py  abc_action.py  abstract_factory_action.py  accessibility_action.py  accessibility_action_action.py  accessibility_inspector_action.py  action_replayer_action.py  action_sequencer_action.py  adapter_action.py  adaptive_load_balancer_action.py  adaptive_retry_action.py  agent_orchestrator_action.py  aggregate2_action.py  aggregate3_action.py  aggregate4_action.py  aggregate5_action.py  aggregate6_action.py  aggregate_action.py  aggregate_v2_action.py  aggregation_action.py  aggregation_engine_action.py  aggregator_action.py  ai21_action.py  airbyte_action.py  airflow_action.py  airflow_trigger_action.py  airtable_action.py  alert_action.py  alert_handler_action.py  amqp_action.py  amqp_consumer_action.py  analytics_action.py  analytics_collector_action.py  animation_controller_action.py  animation_easing_action.py  (+2107 more)
cli/: README.md  main.py
core/: README.md  __init__.py  action_loader.py  base_action.py  context.py  engine.py  exceptions.py  performance.py  workflow_analysis.py  workflow_utils.py
data/: README.md  workflow_scenes.json
docs/: API_COOKBOOK.md  CLI_REFERENCE.md  COMPARISON.md  DEVELOPMENT.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  使用教程.md
examples/: README.md
gui/: README.md  __init__.py  main.py
history/: 20260306_230317_111.json  index.json
hooks/: __init__.py  rthook_cv2.py
plugins/: __init__.py
scripts/: README.md  build_and_test.sh  build_dist.py
src/: README.md  __init__.py  api_server.py  error_handler.py  notification_system.py  pipeline_mode.py  plugin_system.py  predictive_engine.py  screen_recorder.py  self_healing_system.py  workflow_activemq.py  workflow_ai_assistant.py  workflow_aiconfig.py  workflow_airflow.py  workflow_analytics.py  workflow_api_gateway.py  workflow_argocd.py  workflow_aws_amplify.py  workflow_aws_amplifybackend.py  workflow_aws_api_gateway.py  workflow_aws_appconfig.py  workflow_aws_appsync.py  workflow_aws_athena.py  workflow_aws_budgets.py  workflow_aws_ce.py  workflow_aws_chime.py  workflow_aws_cloudformation.py  workflow_aws_cloudfront.py  workflow_aws_cloudsearch.py  workflow_aws_cloudwatch.py  workflow_aws_codebuild.py  workflow_aws_codecommit.py  workflow_aws_codedeploy.py  workflow_aws_codepipeline.py  workflow_aws_codestar.py  workflow_aws_comprehend.py  workflow_aws_config.py  workflow_aws_connect.py  workflow_aws_cur.py  workflow_aws_detective.py  (+104 more)
templates/: README.md  workflows.py
tests/: README.md  conftest.py  debug_engine.py  debug_loader.py  test_actions.py  test_api_server.py  test_app_logger.py  test_batch.py  test_buffer.py  test_builder.py  test_cache.py  test_cache_utils.py  test_cli_utils.py  test_clipboard.py  test_collection_utils.py  test_config.py  test_config_manager.py  test_context.py  test_converter.py  test_core.py  test_counter.py  test_data_structures.py  test_dataclass_utils.py  test_date_utils.py  test_datetime.py  test_debug_utils.py  test_decorators.py  test_dependency.py  test_dict_utils.py  test_env.py  test_env_utils.py  test_error_handler.py  test_error_handling.py  test_event_bus.py  test_events.py  test_execution_stats.py  test_file_utils.py  test_file_watcher.py  test_filter.py  test_flags.py  (+206 more)
ui/: README.md  __init__.py  components.py  hotkey_dialog.py  main_window.py  main_window_v22.py  message.py  mini_toolbar.py  performance.py  region_selector.py  script_editor.py  stats_dialog.py  theme.py  themes.py
utils/: PLUGIN_SYSTEM.md  README.md  __init__.py  ab_testing_utils.py  abort_flag_utils.py  accessibility_audit_utils.py  accessibility_bridge.py  accessibility_bridge_coordinator.py  accessibility_bridge_registry.py  accessibility_bridge_utils.py  accessibility_cache.py  accessibility_cache_invalidation_utils.py  accessibility_event_coalescing_utils.py  accessibility_event_utils.py  accessibility_event_watcher.py  accessibility_inspector_utils.py  accessibility_path_utils.py  accessibility_permission_utils.py  accessibility_query_utils.py  accessibility_reliability_utils.py  accessibility_role_hierarchy.py  accessibility_role_utils.py  accessibility_snapshot.py  accessibility_snapshot_diff_utils.py  accessibility_snapshot_utils.py  accessibility_tree_diff_utils.py  accessibility_tree_utils.py  accessibility_utils.py  accumulator_utils.py  action_batch.py  action_batch_executor.py  action_batch_utils.py  action_chaining.py  action_chaining_utils.py  action_coalescing_buffer.py  action_context_manager.py  action_debouncer.py  action_delay_utils.py  action_filter_utils.py  action_guard.py  (+1432 more)
workflows/: README.md  example_access_control_audit.json  example_access_log_review.json  example_access_review_compliance.json  example_aerospace_fleet_tracking.json  example_aerospace_flight_planning.json  example_aerospace_maintenance_tracking.json  example_aerospace_parts_inventory.json  example_agriculture_crop_monitoring.json  example_agriculture_harvest_planning.json  example_agriculture_irrigation_control.json  example_agriculture_livestock_tracking.json  example_analytics_dashboard_refresh.json  example_analytics_data_exploration.json  example_analytics_data_reporting.json  example_api_endpoint_testing.json  (+1016 more)
(+130 files in other folders)
