[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rabai-autoclick"
version = "22.0.0"
description = "RabAI AutoClick - 桌面端+CLI智能自动化工具 (整合版)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RabAI Team", email = "team@rabai.app"}
]
keywords = [
    "automation", "workflow", "cli", "desktop", 
    "auto-click", "ocr", "image-match", "pyqt5", "macro"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Office/Business",
]

dependencies = [
    "click>=8.1.0",
    "pyautogui>=0.9.53",
    "opencv-python>=4.5.0",
    "PyQt5>=5.15.0",
    "numpy>=1.19.0",
    "rapidocr-onnxruntime>=1.3.0",
    "pynput>=1.7.0",
    "psutil>=5.8.0",
    "Pillow>=8.0.0",
    "keyboard>=0.13.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
ocr = [
    "paddleocr>=2.6.0",
    "paddlepaddle>=2.3.0",
]
easyocr = [
    "easyocr>=1.6.0",
]
all = [
    "paddleocr>=2.6.0",
    "paddlepaddle>=2.3.0",
    "easyocr>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/guige2023/rabai_autoclick"
Documentation = "https://github.com/guige2023/rabai_autoclick#readme"
Repository = "https://github.com/guige2023/rabai_autoclick"
Issues = "https://github.com/guige2023/rabai_autoclick/issues"
Changelog = "https://github.com/guige2023/rabai_autoclick/releases"
# Share your work with the community

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true


[project.scripts]
rabai = "cli.main:cli"
rabai-pipe = "cli.main:pipe_cli"
rabai-gui = "main:main"

[project.gui-scripts]
rabai-desktop = "main:main"

[project.entry-points."rabai.plugins"]
# Plugin entry points can be added here
# example = "rabai_plugins.example:register"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*", "gui*", "core*", "actions*", "utils*", "ui*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.eggs
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.pyright]
include = ["."]
exclude = [
    "**/__pycache__",
    "**/venv",
    "**/.venv",
    "**/build",
    "**/dist",
]
pythonVersion = "3.8"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportOptionalMemberAccess = true
reportTypedDictExtras = true

